# md-viewer

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  REVIEW.md  SETUP.md
.claude/: settings.local.json
.claude/skills/feature/: SKILL.md
.github/workflows/: claude.yml
src/: config.rs  file_browser.rs  file_watcher.rs  main.rs  markdown.rs  project_manager.rs  routes.rs  websocket.rs
static/css/: main.css
static/js/: app.js  context-menu.js  file-browser.js  management.js  markdown-viewer.js  tab-manager.js  websocket-client.js
test_docs/: test.md
